sass/px-popover-predix.scss
/*
 * Copyright (c) 2014 GE Global Research. All rights reserved.
 *
 * The copyright to the computer software herein is the property of
 * GE Global Research. The software may be used and/or copied only
 * with the written permission of GE Global Research or in accordance
 * with the terms and conditions stipulated in the agreement/contract
 * under which the software has been supplied.
 */

//
// Sass for the Predix notion of the px-popover component
//
// @author
//

/*
THIS FILE SHOULD CONTAIN ONLY RULES SPECIFIC TO PREDIX BRANDING
common/abstract rules go in px-popover-sketch.scss, not in this file.
*/

// Settings
@import "px-colors-design/_settings.colors.scss";

@import 'px-popover-sketch.scss';

#popover {
    background-color: $popover-color;
    p {
        margin: 0;
        hyphens: auto;
        &:first-child {
            margin-bottom: .2rem;
            text-transform: capitalize;
        }
    }
}

